# rondo-promocodes-bruteforce

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: linters.yml  unittests.yml
app/: codes.py  crawler.py  settings.py  storage.py  tasks.py
app/rondo_crawler/: __main__.py  crawler.py  parser.py  tasks.py
crawler/: codes.py  crawler.py  settings.py  storage.py
tests/crawler/: test_determine_code_status.py  test_gen_code.py
tests/crawler/codes/: test_alphabet.py  test_gen_code.py
tests/crawler/crawler/: test_check_code_task.py  test_determine_code_status.py  test_find_codes_task.py  test_main.py  test_prepare_session.py
tests/crawler/rondo_crawler/: test_find_codes_task.py  test_main.py  test_parser_code_status.py  test_prepare_session.py  test_tmp.py
tests/crawler/storage/: conftest.py  test_crud.py
tests/crawler/tasks/: test_determine_code_status.py  test_find_codes_task.py
